<resources>
    <string name="app_name">NupcoEmployeeApp</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="payslip">Payslip</string>
    <string name="january_2021">January 2021</string>
    <string name="april_2021">April 2021</string>
    <string name="todo">TODO</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="_02_30_pm">02:30 PM</string>
    <string name="_1_apr_2021">1 Apr 2021</string>
    <string name="_20000">20000</string>
    <string name="sar">SAR</string>
    <string name="view_detail">View Detail</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="company_email">Company Email</string>
    <string name="login">Login</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_and_start_arranging_your_activities">Sign up and start arranging your activities</string>
    <string name="eye">eye</string>
    <string name="password">Password</string>
    <string name="mail">mail</string>
    <string name="anu_123">anu@123</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="anupama2598_gmail_com">anupama2598@gmail.com</string>
    <string name="ok">OK</string>
    <string name="verification_code_sent_on">Verification code sent on</string>
    <string name="abdullah_nupco_com">abdullah@nupco.com</string>
    <string name="welcomeHome">Welcome,</string>
    <string name="mr_abdullah">Mr. Abdullah</string>
    <string name="meeting">Meeting</string>
    <string name="tell_us_your_feeling_today">Tell Us Your Feeling Today</string>
    <string name="tell_us">Tell Us</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="travel">Travel</string>
    <string name="directory">Directory</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="item_names">item_names</string>
    <string name="trips_of_the_day">Tips Of The Day</string>
    <string name="if_your_ship_doesn_t_come_in_swim_out_to_meet_it">“If Your Ship Doesn\'t Come In, Swim Out To Meet It.”</string>
</resources>