<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/april"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="5dp"
        android:padding="4dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/recyclerbackground"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_month">

        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_apr_2021"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/date"
                android:text="@string/_02_30_pm"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cost"
                android:layout_marginVertical="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:text="@string/_20000"
                android:textColor="@color/design_default_color_primary_dark" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/cost"
                android:text="@string/sar"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:gravity="end"
                android:text="@string/view_detail"
                android:textColor="@color/design_default_color_primary_dark" />

        </RelativeLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/downloadbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>