<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/image"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_group_12243"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:fontFamily="@font/aljazeera_arabic_regular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="#47484C"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/aljazeera_arabic_regular"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="31dp"
        android:textColor="#0E1E71"
        android:layout_below="@+id/welcome"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeWidth="0.5sp"
        app:hintTextColor="@null"
        android:layout_below="@+id/signIn"
        android:hint="@string/company_email"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="#4486F4"
        app:endIconTint="@null"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/teal_700"
            android:layout_below="@+id/companyEmail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_below="@id/companyEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"
        android:focusable="true"
        app:hintTextColor="@null"
        app:boxStrokeColor="#4486F4"
        app:boxStrokeWidth="0.5sp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconDrawable="@drawable/ic_password"
        app:endIconMode="custom"
        app:endIconTint="@null">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/companyEmail"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="5dp"
        android:text="@string/forget_your_password"
        android:textColor="#706D6D"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/forgetPassword"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:elevation="0dp"
        android:textColor="@color/white"
        android:background="@drawable/login_button"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="28dp"
        tools:targetApi="lollipop" />
</RelativeLayout>
