<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="356dp"
        app:cardCornerRadius="20dp"
        android:background="@drawable/blueleave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="121dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/verificationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/aljazeera_arabic_regular"
                android:text="@string/verification_code_sent_on"
                android:textColor="#202E47"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/verification_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verificationText"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/aljazeera_arabic_regular"
                android:text="@string/abdullah_nupco_com"
                android:textColor="#6D9AE4"
                android:layout_marginTop="5dp"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btncustomer"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_below="@+id/verification_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:background="@drawable/login_button"
                android:elevation="4dp"
                android:fontFamily="@font/aljazeera_arabic_regular"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                tools:targetApi="lollipop" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>