<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leavespop"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            app:cardCornerRadius="7dp"
            app:cardPreventCornerOverlap="false"
            android:layout_margin="20dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"
                android:src="@drawable/backbtn" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/payslip"
            android:layout_marginHorizontal="70dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="7dp"
                android:layout_below="@id/from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="false"
                app:cardElevation="4dp">
            <RelativeLayout
                android:layout_below="@id/from_txt"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/jan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/january_2021"/>

                <ImageView
                    android:layout_width="13dp"
                    android:src="@drawable/ic_calendar___1"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/jan"
                    android:layout_marginStart="13dp"
                    android:contentDescription="@string/todo"
                    android:layout_height="13dp"/> />

            </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp">
            <TextView
                android:id="@+id/To_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"/>
            <androidx.cardview.widget.CardView
                android:layout_below="@id/To_txt"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="false"
                app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/April"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/black"
                    android:text="@string/april_2021"/>
                <ImageView
                    android:layout_width="13dp"
                    android:src="@drawable/ic_calendar___1"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/April"
                    android:layout_marginStart="13dp"
                    android:contentDescription="@string/todo"
                    android:layout_height="13dp"/>

            </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/list2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>